--- a/personal-site/src/App.css
+++ b/personal-site/src/App.css
@@ -1,38 +1,112 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  width: 100vw;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding-top: 2%;
+  background-color: black;
+  overflow-y: scroll;
 }
 
-.App-link {
-  color: #61dafb;
+.prof-details {
+  display: flex;
+  width: 80%;
+  align-items: center;
+  font-size: x-large;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.prof-img {
+  height: 30vh;
+  width: 40vw;
+  border-radius: 30%;
+  margin-right: 5%;
+}
+
+.clickables {
+  width: 80%;
+  margin-top: 2%;
+  padding-top: 2%;
+  margin-bottom: 2%;
+  padding-bottom: 2%;
+  border-top: .5vh solid rgb(118, 224, 89);
+  border-bottom: .5vh solid rgb(118, 224, 89);
+  display: flex;
+  justify-content: space-around;
+  font-size: larger;
+}
+
+.clickables > div:hover {
+  cursor: pointer;
+  text-decoration: underline;
+}
+
+.proff-links {
+  width: 80%;
+  min-height: 30vh;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  font-size: x-large;
+  list-style: none;
+}
+
+.proff-links > li > a {
+  text-decoration: none;
+}
+
+.proff-links > li > a:hover {
+  text-decoration: underline;
+}
+
+.project {
+  margin-bottom: 5%;
+  width: 80vw;
+  list-style: none;
+  padding-bottom: 2%;
+  border-bottom: .5vh solid rgb(118, 224, 89);
+}
+
+.proj-img {
+  margin-bottom: 2%;
+}
+
+.proj-dets {
+  font-size: xx-large;
+}
+
+.proj-links {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.proj-links > a {
+  text-decoration: none;
+  font-size: xx-large;
+}
+
+.proj-links > a:hover {
+  text-decoration: underline;
+}
+
+.skills-list {
+  display: flex;
+  flex-wrap: wrap;
+  width: 40%;
+}
+
+.skills-list > li {
+  margin-right: 30%;
+  font-size: x-large;
+}
+
+
+.contact-info {
+  min-height: 30vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  font-size: x-large;
+  text-align: center;
 }
