--- a/personal-site/src/App.css
+++ b/personal-site/src/App.css
@@ -65,10 +65,16 @@
   list-style: none;
   padding-bottom: 2%;
   border-bottom: .5vh solid rgb(118, 224, 89);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
 }
 
 .proj-img {
   margin-bottom: 2%;
+  width: 80vw;
+  height: 80vh;
 }
 
 .proj-dets {
